--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,9 @@ img {
 }
 
 .site-navigation a:hover,
-.user-navigation a:hover {
+.user-navigation a:hover,
+.site-navigation a:focus,
+.user-navigation a:focus {
   color: var(--basic-red);
 }
 
@@ -240,6 +242,7 @@ img {
   top: 110px;
   width: 61px;
   border: 2px solid var(--basic-red);
+  background-color: var(--basic-red);
 }
 
 .site-navigation .navigation-current:nth-child(2n)::before {
@@ -248,6 +251,7 @@ img {
   top: 110px;
   width: 76px;
   border: 2px solid var(--basic-red);
+  background-color: var(--basic-red);
 }
 
 .site-navigation .navigation-current:nth-child(3n)::before {
@@ -256,6 +260,7 @@ img {
   top: 110px;
   width: 74px;
   border: 2px solid var(--basic-red);
+  background-color: var(--basic-red);
 }
 
 .site-navigation .navigation-current:nth-child(4n)::before {
@@ -264,6 +269,7 @@ img {
   top: 110px;
   width: 83px;
   border: 2px solid var(--basic-red);
+  background-color: var(--basic-red);
 }
 
 .user-navigation .navigation-current::before {
@@ -273,6 +279,7 @@ img {
   left: 5px;
   width: 112px;
   border: 2px solid var(--basic-red);
+  background-color: var(--basic-red);
 }
 
 
@@ -317,7 +324,8 @@ img {
   margin-bottom: 80px; /* до конца фона header */
 }
 
-.photoslides-know-button:hover {
+.photoslides-know-button:hover,
+.photoslides-know-button:focus {
   background-color: var(--basic-medium-red);
 }
 
@@ -387,15 +395,16 @@ img {
 
 .services {
   margin-bottom: 121px;
-  position: relative;
+  position: relative; /* позиция для горизонтального серого бордера */
 }
 
 .services::before {
   content: "";
-  position: absolute;
+  position: absolute; /* горизонтальный серый бордер */
   top: 420px;
   width: 1158px;
   border: 2px solid var(--basic-gray);
+  background-color: var(--basic-gray);
 }
 
 .services-list {
@@ -429,7 +438,8 @@ img {
   background-color: var(--basic-red);
 }
 
-.website-button:hover {
+.website-button:hover,
+.website-button:focus {
   background-color: var(--basic-medium-red);
 }
 
@@ -442,7 +452,8 @@ img {
   background-color: var(--basic-green);
 }
 
-.app-button:hover {
+.app-button:hover,
+.app-button:focus {
   background-color: var(--basic-medium-green);
 }
 
@@ -455,7 +466,8 @@ img {
   background-color: var(--basic-yellow);
 }
 
-.presentation-button:hover {
+.presentation-button:hover,
+.presentation-button:focus {
   background-color: var(--basic-medium-yellow);
 }
 
@@ -507,17 +519,18 @@ img {
 }
 
 .features-item {
-  position: relative;
+  position: relative; /* позиция для красных буллетов */
 }
 
 .features-item::before {
   display: inline-block;
   content: "";
-  position: absolute;
+  position: absolute; /* красные буллеты */
   top: 27px;
   left: -32px;
   width: 25px;
   border: 2px solid var(--basic-red);
+  background-color: var(--basic-red);
 }
 
 .features-slogan {
@@ -631,13 +644,12 @@ img {
   opacity: 0.2;
 }
 
-.partner-link img:hover {
-  background-color: var(--basic-background-white);
+.partner-link img:hover,
+.partner-link:focus img{
   opacity: 1;
 }
 
 .partner-link img:active {
-  background-color: var(--basic-background-white);
   opacity: 0.1;
 }
 
@@ -652,6 +664,7 @@ img {
   bottom: 150px;
   width: 1158px;
   border: 2px solid var(--basic-gray);
+  background-color: var(--basic-gray);
 }
 
 .partners::before {
@@ -660,6 +673,7 @@ img {
   top: 120px;
   width: 1158px;
   border: 2px solid var(--basic-gray);
+  background-color: var(--basic-gray);
 }
 .partners-item {
   position: relative; /* позиция для вертикальных серых бордеров */
@@ -672,6 +686,7 @@ img {
   left: 250px;
   height: 52px;
   border: 2px solid var(--basic-gray);
+  background-color: var(--basic-gray);
 }
 
 .partners-item:last-child::before {
@@ -751,13 +766,18 @@ img {
   color: var(--basic-medium-gray);
 }
 
+.contacts-phone-number:focus {
+  color: var(--basic-black);
+}
+
 .contacts-button {
   margin-top: 30px; /* отступ между номером телефона и ссылкой "Напишите нам" */
   padding: 17px 44px 0px 44px;
   background-color: var(--basic-red);
 }
 
-.contacts-button:hover {
+.contacts-button:hover,
+.contacts-button:focus {
   background-color: var(--basic-medium-red);
 }
 
@@ -854,7 +874,8 @@ img {
   background-color: var(--basic-red);
 }
 
-.modal-button:hover {
+.modal-button:hover,
+.modal-button:focus {
   background-color: var(--basic-medium-red);
 }
 
@@ -899,7 +920,9 @@ img {
 }
 
 .modal-close:hover::before,
-.modal-close:hover::after {
+.modal-close:hover::after,
+.modal-close:focus::before,
+.modal-close:focus::after {
   opacity: 1;
 }
 
@@ -949,7 +972,8 @@ img {
   background: var(--basic-gradient-gray);
 }
 
-.social-button:hover {
+.social-button:hover,
+.social-button:focus {
   background-image: var(--basic-gradient-red);
 }
 
@@ -995,12 +1019,12 @@ img {
 /* ========== Catalog page - header ========== */
 
 .inner-header-logo img,
-.inner-header-logo img:hover {
-  background-color: var(--basic-black);
+.inner-header-logo img:hover,
+.inner-header-logo img:focus {
+  opacity: 1;
 }
 
 .inner-header-logo img:active {
-  background-color: var(--basic-white);
   opacity: 0.3;
 }
 
@@ -1196,6 +1220,10 @@ img {
   opacity: 1;
 }
 
+.filter-input-radio:focus + label::before,
+.filter-input-radio:checked:focus + label::after {
+  opacity: 1;
+}
 
 .filter-input-radio + label:disabled::before,
 .filter-input-radio:checked + label:disabled::after {
@@ -1235,6 +1263,11 @@ img {
   opacity: 1;
 }
 
+.filter-input-checkbox:focus + label::after,
+.filter-input-checkbox:checked:focus + label::after {
+  opacity: 1;
+}
+
 .filter-input-checkbox + label:disabled::after,
 .filter-input-checkbox:checked + label:disabled::after {
   opacity: 0.1;
@@ -1248,7 +1281,8 @@ img {
   padding: 17px 89px 15px 88px;
 }
 
-.filter-button:hover {
+.filter-button:hover,
+.filter-button:focus {
   background-color: var(--basic-low-gray);
 }
 
@@ -1297,10 +1331,13 @@ img {
   opacity: 0.3;
 }
 
-.sorting-filter-item a:hover {
+.sorting-filter-item a:hover,
+.sorting-filter-item a:focus,
+.sorting-filter-item-current a:focus {
   color: var(--basic-black);
   opacity: 0.6;
 }
+
 
 .sorting-filter-item a:active {
   color: var(--basic-black);
@@ -1359,10 +1396,13 @@ img {
   position: relative; /* для треугольников вверх и вниз */
 }
 
-.triangle-item a:hover {
+.triangle-item a:hover,
+.triangle-item a:focus,
+.triangle-item-current a:focus {
   color: var(--basic-dark-black);
   opacity: 0.6;
 }
+
 
 .triangle-item a:active {
   color: var(--basic-dark-black);
@@ -1375,6 +1415,7 @@ img {
   color: var(--basic-dark-black);
   opacity: 1;
 }
+
 
 /* Templates */
 
@@ -1397,6 +1438,7 @@ img {
   flex-basis: 360px;
   margin-top: 26px;
   margin-right: 40px;
+  margin-bottom: 31px;
   position: relative; /* для шапок шаблонов */
 }
 
@@ -1405,15 +1447,15 @@ img {
 }
 
 .template-picture {
-  margin-left: 1px;
-  margin-bottom: 31px;
-  box-shadow: var(--basic-drop-shadow);
+  border: 1px solid var(--basic-nano-gray);
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
 }
 
 .template-item::before {
 content: "";
 position: absolute; /* шапка шаблона */
-top: -26px;
+top: -25px;
 width: 360px;
 height: 40px;
 border-top-left-radius: 3px;
@@ -1422,7 +1464,8 @@ background-color: var(--basic-extra-gray);
 opacity: 0.12;
 }
 
-.template-item:hover::before {
+.template-item:hover::before,
+.template-item:focus::before {
 opacity: 1;
 }
 
@@ -1465,13 +1508,17 @@ opacity: 1;
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
   border: none;
-  top: 360px;
+  top: 363px;
   opacity: 0;
 }
 
 .template-item:hover .template-popup,
 .template-item:focus .template-popup {
-  opacity: 1; /* При наведении на шаблон показывается попап */
+  opacity: 1; /* При наведении и фокусе на шаблон показывается попап */
+}
+
+.template-popup:focus-within {
+  opacity: 1;
 }
 
 .template-price-title {
@@ -1485,7 +1532,8 @@ opacity: 1;
   color: var(--basic-black);
 }
 
-.template-price-title:hover {
+.template-price-title:hover,
+.template-price-title:focus {
   color: var(--basic-red);
 }
 
@@ -1506,7 +1554,8 @@ opacity: 1;
   background-color: var(--basic-red);
 }
 
-.template-price-button:hover {
+.template-price-button:hover,
+.template-price-button:focus {
   background-color: var(--basic-medium-red);
 }
 
@@ -1535,7 +1584,8 @@ opacity: 1;
   padding: 17px 77px 15px 78px;
 }
 
-.pagination-item a:hover {
+.pagination-item a:hover,
+.pagination-item a:focus {
   background-color: var(--basic-low-gray);
 }
 
@@ -1547,6 +1597,7 @@ opacity: 1;
 
 .pagination-item-current a,
 .pagination-item-current a:hover,
+.pagination-item-current a:focus,
 .pagination-item-current a:active {
   color: var(--basic-black);
   background-color: var(--basic-background-white);
@@ -1554,6 +1605,7 @@ opacity: 1;
   box-shadow: none;
   padding: 14px 18px 13px 18px;
 }
+
 
 /*  Flex for pagination */
 
