--- a/css/style.css
+++ b/css/style.css
@@ -802,6 +802,7 @@ img {
 }
 
 .modal {
+
   position: fixed;
   top: 0;
   right: 0;
@@ -1536,6 +1537,11 @@ opacity: 1;
   color: var(--basic-black);
 }
 
+.template-price-text-sedona {
+  padding-left: 30px;
+  padding-right: 30px;  /* скринридер криво отображает перенос текста через <br> в попапе Sedona, исправлено паддингами */
+}
+
 .template-price-title:hover,
 .template-price-title:focus {
   color: var(--basic-red);
@@ -1546,7 +1552,8 @@ opacity: 1;
   opacity: 0.3;
 }
 
-.template-price-text {
+.template-price-text,
+.template-price-text-sedona {
   font-size: 16px;
   line-height: 18px;
   text-align: center;
